Updated Navbar Item Styling

--- a/aboutme.html
+++ b/aboutme.html
@@ -31,9 +31,9 @@
                     งานสัปดาห์วิทยาศาสตร์
                 </a>
 
-                <a class="navbar-item" href="/aboutme.html">
+                <div class="navbar-item has-text-white has-background-black m-auto" id="currentPageNavbar">
                     ข้อมูลส่วนตัว
-                </a>
+                </div>
 
 
             </div>
