--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar">
-                <a class="navbar-item">
+                <div class="navbar-item has-text-white has-background-black m-auto" id="currentPageNavbar">
                     งานสัปดาห์วิทยาศาสตร์
-                </a>
+                </div>
 
-                <a class="navbar-item">
+                <a class="navbar-item" href="/aboutme.html">
                     ข้อมูลส่วนตัว
                 </a>
 
@@ -184,7 +184,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
         <footer class="footer p-5 has-background-white mt-5" id="footer">
             <div class="content has-text-centered">
-                <p>เว็บไซต์นี้ เป็นชิ้นงานวิชา 0232410165 การสร้างดิจิทัลคอนเทนต์<br>จัดทำโดย นาย กรกมล ศรีอ่อน IT212
+                <p>เจัดทำโดย นาย กรกมล ศรีอ่อน IT212
                     รหัสนักศึกษา
                     366202360058
                     <hr class="has-background-black-ter">
