Reduced Container Width.

--- a/aboutme.html
+++ b/aboutme.html
@@ -48,7 +48,7 @@
     </section>
 
     <div class="realContainer pt-5">
-        <div class="container" style="height:fit-content">
+        <div class="container is-max-widescreen" >
 
             <section class="section">
                 <div class="tile is-ancestor">
