--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
     </section>
 
     <div class="realContainer pt-5">
-        <div class="container">
+        <div class="container is-max-widescreen">
             <section class="section">
                 <section id="image-carousel" class="splide">
                     <div class="splide__track">
