--- a/aboutme.html
+++ b/aboutme.html
@@ -56,7 +56,7 @@
                         <div class="tile">
 
                             <div class="tile is-parent">
-                                <article class="tile is-child notification is-info">
+                                <article class="tile is-child">
                                     <figure class="image is-3by4">
                                         <img src="/src/img/me69.jpg">
                                     </figure>
@@ -64,14 +64,14 @@
                             </div>
                         </div>
                         <div class="tile is-parent">
-                            <article class="tile is-child notification is-danger">
+                            <article class="tile is-child p-auto">
                                 <div class="content">
                                     <h1 class="title">ข้อมูลส่วนตัว</h1>
                                     <ul>
                                         <li>ชื่อ นาย กรกมล ศรีอ่อน ชื่อเล่น บิ๊ก</li>
                                         <li>กำลังศึกษาอยู่ที่ มหาวิทยาลัยเทคโนโลยีราชมงคลศรีวิชัย ไสใหญ่</li>
                                         <li>เกิดวันที่ 17 มิถุนายน 2545 อายุ 21 ปี</li>
-                                        <li>งานอดิเรก: ฟังเพลง, ติดตามข่าว IT</li>
+                                        <li>งานอดิเรก: ฟังเพลง, เดินเล่น</li>
 
                                     </ul>
                                 </div>
@@ -79,9 +79,9 @@
                         </div>
                     </div>
                     <div class="tile is-parent">
-                        <article class="tile is-child notification is-success">
+                        <article class="tile is-child p-auto">
                             <div class="content">
-                                <p class="title">ประวัติการศึกษา</p>
+                                <h1 class="title">ประวัติการศึกษา</h1>
 
                                 <div class="content">
                                     <!-- Content -->
@@ -129,12 +129,16 @@
                                                 <li>เว็บ Social Platform - PHP</li>
                                                 <li>Discord Bot</li>
                                                 <li>แอปช่วยเหลือผู้สูงอายุ - แข่งทักษะ ปวส.2</li>
-                                                <li>Kotlin</li>
                                             </ul>
                                         </div>
                                     </div>
+                                    <h1 class="title">Contact</h1>
+                                    <ul>
+                                        <li><a class="has-text-link-light" href="https://www.facebook.com/bKoZii" target="_blank">Facebook</a></li>
+                                        <li><a class="has-text-link-light" href="https://www.instagram.com/bKoZiii" target="_blank">Instagram</a></li>
+                                        <li><a class="has-text-link-light" href="mailto:konkamon.si@rmutsvmail.com">Email: konkamon.si@rmutsvmail.com</a></li>
+                                    </ul>
                                 </div>
-
                             </div>
                         </article>
                     </div>
